# noodle-fts

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml  ruff.toml  rustfmt.toml
.github/workflows/: ci.yml
core/: Cargo.toml  README.md
core/src/: error.rs  fields.rs  lib.rs  main.rs  types.rs
core/src/chem/: mod.rs
core/src/domain/: cell.rs  domain.rs  fft.rs  mesh.rs  mod.rs
core/src/simulation/: mod.rs  scft.rs
core/src/solvers/: block.rs  mod.rs  point.rs  polymer.rs  propagator.rs  solver.rs
core/src/system/: interaction.rs  mod.rs  system.rs  updater.rs
core/src/updaters/: euler.rs  mod.rs  updater.rs
core/src/utils/: math.rs
examples/: scft.ipynb
examples/configs/: blend.yaml  diblock.yaml  triblock.yaml
pyfts/: __init__.py  _core.pyi
pyfts/chem/: block.py  monomer.py  species.py
pyfts/domain/: cell.py  ksq.py  mesh.py
pyfts/simulation/: scft.py
pyfts/solvers/: __init__.py
pyfts/system/: hamiltonian.py  system.py
pyfts/updaters/: base.py  euler.py
pynoodle/: __init__.py  _core.pyi  builder.py
pynoodle/configs/: __init__.py  base.py  chem.py  domain.py  system.py
pynoodle/simulation/: __init__.py  scft.py
python/: Cargo.toml  README.md  pyproject.toml
python/pyfts/: __init__.py  _pyfts.pyi
python/src/: chem.rs  domain.rs  error.rs  lib.rs  system.rs  utils.rs
src/: dimensions.rs  error.rs  fft.rs  field.rs  fields.rs  lib.rs  main.rs  math.rs  mde.rs  mesh.rs  prelude.rs  species.rs  system.rs  types.rs
src/chem/: block.rs  mod.rs  monomer.rs  polymer.rs  species.rs
src/domain/: cell.rs  core.rs  dimensions.rs  domain.rs  fft.rs  mesh.rs  mod.rs
src/field/: cell.rs  domain.rs  fft.rs  mod.rs
src/interactions/: flory.rs  mod.rs
src/python/: chem.rs  domain.rs  error.rs  mod.rs  simulation.rs  system.rs  updaters.rs  utils.rs
src/simulation/: cl.rs  mod.rs  scft.rs  updater.rs
src/solvers/: block.rs  ensemble.rs  grid.rs  mod.rs  point.rs  polymer.rs  propagator.rs  solver.rs  state.rs  step.rs
src/species/: ensemble.rs  mod.rs  point.rs  solver.rs  species.rs
src/system/: core.rs  interaction.rs  mod.rs  system.rs  updater.rs
src/system/updaters/: cell.rs  field.rs  mod.rs
src/updaters/: euler.rs  mod.rs  updater.rs
src/utils/: math.rs
tests/: conftest.py  test_core.py  test_variable_cell.py
tests/configs/: __init__.py  test_chem.py  test_domain.py  test_system.py
tests/simulation/: test_scft.py
