[package]
name = "fts"
edition = "2021"
version = "0.1.0"
authors = ["Sean Friedowitz <sfriedowitz93@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
description = "Polymer field-theoretic simulations in Rust."

[lib]
name = "fts"
path = "src/lib.rs"

[main]
name = "fts"
path = "src/main.rs"

[features]
"default" = ["openblas-system"]
"openblas" = ["ndarray-linalg/openblas"]
"openblas-system" = ["ndarray-linalg/openblas-system"]
python = ["pyo3", "numpy"]

[dependencies]
num = "0.4.2"
enum_dispatch = "0.3.13"
float-cmp = "0.9.0"
itertools = "0.13.0"
ndrustfft = { version = "0.4.4", features = ["parallel"] }
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-linalg = "0.16.0"
ndarray-rand = "0.14.0"
thiserror = "1.0.61"
rand = "0.8.5"
pyo3 = { version = "0.21.2", optional = true }
numpy = { version = "0.21.0", optional = true }

[profile.release]
lto = true
