[package]
name = "noodle-fts"
edition = "2024"
version = "0.1.0"
authors = ["Sean Friedowitz <sfriedowitz93@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
description = "Polymer field-theoretic simulations in Rust."

[lib]
name = "noodle"
path = "src/lib.rs"

[features]
"default" = ["openblas-system"]
"openblas" = ["ndarray-linalg/openblas"]
"openblas-system" = ["ndarray-linalg/openblas-system"]
python = ["pyo3", "numpy"]

[dependencies]
thiserror = "2.0.17"
itertools = "0.14.0"
enum_dispatch = "0.3.13"
float-cmp = "0.10.0"
num = "0.4.3"
ndrustfft = { version = "0.6.0", features = ["parallel"] }
ndarray = { version = "0.17.1", features = ["rayon"] }
ndarray-linalg = "0.18.0"
ndarray-rand = "0.16.0"
pyo3 = { version = "0.27.2", optional = true }
numpy = { version = "0.27.1", optional = true }
rand = { version = "0.9", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.8.1"

[profile.release]
lto = true
