[project]
name = "pynoodle"
requires-python = ">=3.10"
dynamic = ['description', 'license', 'readme', 'version']

dependencies = ["numpy>=1.26,<2", "matplotlib>=3.9,<4", "tqdm>=4.66,<5"]

[project.optional-dependencies]
dev = ["jupyter"]
test = ["pytest==8.2.1", "pytest-cov[all]"]
all = ["pynoodle[dev,test]"]

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module", "python"]
module-name = "pynoodle._core"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
