[package]
name = "pyfts"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
readme = "README.md"
description = "Python bindings to the core FTS library."

[lib]
name = "pyfts"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.21.0"
pyo3 = "0.21.2"

[dependencies.fts]
path = "../core"
